@@ -31,9 +31,14 @@ public:
     
     enum Clock { Realtime, Monotonic };
     static Time now(Clock = Realtime);
+
     static Time seconds(Int64);
     static Time milliSeconds(Int64);
     static Time microSeconds(Int64);
+
+    static Time secondsDouble(double);
+    static Time milliSecondsDouble(double);
+    static Time microSecondsDouble(double);
     
 #ifndef _WIN32
     operator timeval() const;
